
if have_webkit
  # subdir('help-browser')
endif

if have_openexr
  # subdir('file-exr')
endif

if have_print
  # subdir('print')
endif

if have_python
  # subdir('pygimp')
endif

if have_scriptfu
  # subdir('script-fu')
endif

if os_win32
  # subdir('twain')
endif

if have_webp
  # subdir('file-webp')
endif


# subdir('$(file_darktable)')
# subdir('common')
# subdir('file-bmp')
# subdir('file-faxg3')
# subdir('file-fits')
# subdir('file-fli')
# subdir('file-ico')
# subdir('file-jpeg')
# subdir('file-psd')
# subdir('file-raw')
# subdir('file-sgi')
# subdir('file-tiff')
# subdir('flame')
# subdir('fractal-explorer')
# subdir('gfig')
# subdir('gimpressionist')
# subdir('gradient-flare')
# subdir('help')
# subdir('ifs-compose')
# subdir('imagemap')
# subdir('lighting')
# subdir('map-object')
# subdir('metadata')
# subdir('pagecurl')
# subdir('screenshot')
# subdir('selection-to-path')
# subdir('ui')
