subdir('common')
subdir('file-bmp')
if openexr.found()
  subdir('file-exr')
endif
subdir('file-faxg3')
subdir('file-fits')
subdir('file-fli')
subdir('file-ico')
subdir('file-jpeg')
subdir('file-psd')
subdir('file-raw')
subdir('file-sgi')
subdir('file-tiff')
if webp.found()
  subdir('file-webp')
endif
subdir('flame')
subdir('fractal-explorer')
subdir('gfig')
subdir('gimpressionist')
subdir('gradient-flare')
subdir('help')
if webkit.found()
  subdir('help-browser')
endif
subdir('ifs-compose')
subdir('imagemap')
subdir('lighting')
subdir('map-object')
subdir('metadata')
subdir('pagecurl')
if have_print
  subdir('print')
endif
if have_python
  subdir('pygimp')
endif
subdir('screenshot')
if have_scriptfu
  subdir('script-fu')
endif
subdir('selection-to-path')
if platform_win32
  subdir('twain')
endif
subdir('ui')
